--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -4,7 +4,7 @@
 }
 .movie-poster{
     height: 300px;
-    border: 1px solid gold;
+    border: 1px solid silver;
     border-radius: 10px;
     overflow: hidden;
 }
@@ -49,7 +49,7 @@
 .play-button-icon{
     padding: 0px;
     margin: 0px;
-    color: gold;
+    color: silver;
     font-size: 3rem;
     transition: 0.3s;
     cursor: pointer;
